Module #5. V16_09_2026. Update [wallet-service]. Fixed bugs, updated OpenAPI specification
